
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.1-rc1
====================================
- [#MODX-2163] Give area combobox in System Settings a bit more breathing room
- [#MODX-2259] Fixed issue with empty value fields in extended/remote fields via ORM widget
- [#MODX-2249] Fixed issue with misleading comment in modTemplateVar::getValue
- [#MODX-2270] Added option to sort by pulishedon in the resource tree
- [#MODX-2278] Removed non-used files and added space to empty files
- [#MODX-2250] Fixed bug where Checkbox TVs with default value dont allow all checkboxes unchecked
- [#MODX-2274] Introduced filemanager_url setting to handle URLs when filemanager_path is outside the webroot
- [#MODX-2251] Fixed issue where @bindings in TVs were running during input, preventing setting values
- Fixed bug with modContext::getOption and default values
- [#MODX-2184] Fixed issues with MODx.rte.Browser and context-specifics
- Fixed issue with filemanager_path in Windows
- Fixed a possible issue in base file perms in modFileHandler
- Fixed some random typos in system settings data and lexicon translations
- Fixed bug where userinfo filter was outputting wrong content when user was empty
- [#MODX-2263] Fixed IE issue with dropdowns as TVs
- [#MODX-2183] Autotag values are now alphabetically sorted
- [#MODX-2240] Site - Preview now dynamically previews current editing context
- Fixed invalid login issue that prevented OnUserNotFound from firing on mgr login screen
- [#MODX-2238] Fixed bugs regarding parent constraint and default template
- [#MODX-2234] Fixed issue when drag/dropping a Resource into the parent field
- [#MODX-2226] Fixed bugs with date output filter not behaving as expected