@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.1-rc1
 ====================================
+- Trees now properly handle state, allowing multiple state paths to be set
 - [#MODX-2163] Give area combobox in System Settings a bit more breathing room
 - [#MODX-2259] Fixed issue with empty value fields in extended/remote fields via ORM widget
 - [#MODX-2249] Fixed issue with misleading comment in modTemplateVar::getValue
